# cado

./: CMakeLists.txt  Makefile.am  PostInstall.cmake  README  README.md  Uninstall.cmake  cado.1  cado.c  cado.conf  cado.conf.5  cado_paths.h  cado_scado_check.c  cado_scado_check.h  cadrop.1  cadrop.c  caprint.1  caprint.c  capset_from_namelist.c  capset_from_namelist.h  compute_digest.c  config.h.in  configure.ac  create_deb.sh  get_scado_file.h  get_user_groups.c  pam_check.c  pam_check.h  read_conf.c  read_conf.h  scado.1  scado.c  scado_parse.c  scado_parse.h  set_ambient_cap.c  set_ambient_cap.h
CMake/: FindEXECS.cmake  FindLIBCAP.cmake  FindMHASH.cmake  FindPAM.cmake  FindPAM_MISC.cmake
debian/: cado.install  changelog  control  copyright  install  postinst  rules
include/: cado_const.h  cado_paths.h  compute_digest.h  config.h.in  file_utils.h  get_user_groups.h  least_priv.h  pam_check.h  read_conf.h  set_ambient_cap.h
man/: CMakeLists.txt  Makefile  cado.1  cado.conf.5  cadrop.1  scado.1
src/: CMakeLists.txt  cado.c  cado_scado_check.c  caprint.c  capset_from_namelist.c  compute_digest.c  file_utils.c  least_priv.c  pam_check.c  read_conf.c  scado.c  scado_parse.c  set_ambient_cap.c
